<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <RadioGroup android:layout_width="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/radioGroup"
                android:orientation="vertical"
                android:layout_height="wrap_content">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usRadio"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/us_city"
                android:labelFor="@+id/usCity"
                android:layout_marginEnd="8dp"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/zipRadio"
                android:labelFor="@+id/zip"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/zip"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usRadio"
                android:layout_marginEnd="8dp"/>
    </RadioGroup>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginRight="10dp"
            android:ems="10"
            app:layout_constraintTop_toTopOf="@+id/radioGroup"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/usCity"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginRight="10dp"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/usCity"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/zip"/>
    <Button
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:id="@+id/search"/>
    <ProgressBar android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:indeterminate="true"
                 android:visibility="gone"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:id="@+id/progress"
    />
</android.support.constraint.ConstraintLayout>